# AISV

./: .gitignore  README.md
sushi_training/: README.md
sushi_training/UNET/annotate/: mask_annot.py
sushi_training/UNET/train/: test_unet.py  train_unet.py
sushi_training/YOLO/annotate/: annotate_yolo.py
sushi_training/YOLO/train/: fix_yolo.py  prepare_yolo.py  test_yolo.py  train_yolo.py
sushi_training/conversion_scripts/: dpt_pt_2_trt.py  ultralytics-pt-to-trt.py  unet_to_trt_lptop.py
sushi_ws/: README.md
sushi_ws/src/controller/: README.md  package.xml  setup.py
sushi_ws/src/controller/controller/: control_system.py  dwa_controller.py  fuzzy_controller.py
sushi_ws/src/controller/controller/old_script/: init_pos.py
sushi_ws/src/path_planner/: README.md  package.xml  setup.py
sushi_ws/src/path_planner/config/: carto_oak.lua  mapper_params.yaml
sushi_ws/src/path_planner/launch/: localisation.launch.py  planner_launch.py
sushi_ws/src/path_planner/path_planner/: behavior_system.py  robot_pose_publisher.py  vision_planner.py  water_explorer.py
sushi_ws/src/vision/: package.xml  setup.py
sushi_ws/src/vision/config/: vision.rviz
sushi_ws/src/vision/launch/: vision_launch.py
sushi_ws/src/vision/vision/: detection.py  sort.py  tf.py  trt_dpt.py  vio_node.py  vision.py  water_seg_trt.py
toast/: README.md
toast/Assets/: Mubadala scene.unity
toast/Assets/Models/: PrefabMeta.cs
toast/Assets/Models/Materials/: Default.mat
toast/Assets/Models/Obstacles/Lilipads/: lilipad.fbx  lilipad_prefab.prefab
toast/Assets/Models/Obstacles/Rock/: Rock_brown.mat  Rock_brown_prefab.prefab  (+2 more)
toast/Assets/Models/Trash/: bottle_prefab.prefab  can.blend  can_FBX.fbx  can_flipped.fbx  cola_material.mat  cola_prefab.prefab  empty_bottle.fbx  fanta_material.mat  fanta_prefab.prefab  pepsi_material.mat  pepsi_prefab.prefab  sprite_material.mat  sprite_prefab.prefab
toast/Assets/Render Textures/: RT.renderTexture  depth texture.renderTexture  rgb_l.renderTexture  rgb_r.renderTexture
toast/Assets/Resources/: ROSConnectionPrefab.prefab
toast/Assets/Scenes/: hamze_scene.json
toast/Assets/Scripts/: SceneManager.cs  SpawnerScript.cs
toast/Assets/Scripts/Physics/: BuoyancyManager.cs  BuoyancyOld.cs  Thrusters.cs  WaveManager.cs
toast/Assets/Scripts/ROS/: BucketService.cs  Publisher.cs  Subscriber.cs
toast/Assets/Scripts/Sensors/: Clock.cs  Imu.cs  Lidar2D.cs  Sonar.cs
toast/Assets/Settings/: HDRP High Fidelity.asset  SkyandFogSettingsProfile.asset
toast/Assets/Settings/HDRPDefaultResources/: HDRenderPipelineGlobalSettings.asset
toast/Assets/Shaders/: RenderDepth.shader
(+13 files in other folders)
